# personal_ai_paper

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README.zh-CN.md  agent_executor.py  analysis_pipeline.py  analysis_prompts.py  analysis_verifier.py  api_sidecar.py  card_extractor.py  config.py  db.py  db_migrations.py  embeddings.py  hybrid_search.py  llm_client.py  main.py  mcp_server.py  package-lock.json  package.json  parser.py  pdf_backend_base.py  pdf_backend_docling.py  pdf_backend_grobid.py  pdf_backend_legacy.py  pdf_backend_llamaparse.py  pdf_backend_pymupdf4llm.py  pdf_chunker.py  pdf_models.py  pdf_persistence.py  pdf_profile.py  pdf_router.py  pyproject.toml  routes_agent.py  routes_cards.py  routes_papers.py  routes_search.py  routes_spaces.py  (+1 more)
.cargo/: config.toml
docs/: backend-api-testing.md  packaging.md  pdf-ingestion.md  privacy.md  product-overview.md  sample-data.md
docs/superpowers/plans/: 2026-04-24-tauri-desktop-packaging-implementation.md  2026-04-27-pdf-ingestion-ai-analysis-upgrade.md  2026-04-28-backend-rearchitecture.md  2026-04-28-local-paper-pdf-parser.md  2026-04-29-pdf-parser-selection-worker.md
docs/superpowers/specs/: 2026-04-24-local-paper-knowledge-engine-design.md  2026-04-24-tauri-desktop-packaging-design.md  2026-04-28-backend-rearchitecture-design.md  2026-04-28-local-paper-pdf-parser-design.md  2026-04-29-pdf-parser-selection-worker-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  StandalonePdfReader.tsx  api-contract.test-d.ts  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/layout/: Inspector.tsx  Sidebar.tsx  Workspace.tsx
frontend/src/components/modals/: ConfirmModal.tsx  DialogShell.tsx  EditPaperModal.tsx  MCPGuideModal.tsx  ModalsContainer.tsx  SettingsModal.tsx  SpaceModal.tsx
frontend/src/components/ui/: KnowledgeCardFancy.tsx  LoadingOverlay.tsx  PaperCard.tsx  PdfReader.tsx  Select.tsx  Toast.tsx
frontend/src/hooks/: useLlmConfig.ts  useModals.ts  useOutsideClick.ts  usePapers.ts  useSpaces.ts
frontend/src/store/: uiStore.ts
paper_engine/: __init__.py
paper_engine/agent/: __init__.py  executor.py  llm_client.py  service.py
paper_engine/analysis/: __init__.py  jobs.py  models.py  pipeline.py  prompts.py  verifier.py  worker.py
paper_engine/api/: app.py  dependencies.py
paper_engine/api/routes/: agent.py  cards.py  papers.py  search.py  spaces.py
paper_engine/cards/: __init__.py  service.py
paper_engine/core/: config.py  errors.py  startup.py
paper_engine/mcp/: __init__.py  server.py
paper_engine/papers/: __init__.py  metadata.py  service.py
paper_engine/pdf/: __init__.py  chunking.py  compat.py  jobs.py  models.py  persistence.py  profile.py  router.py  settings.py  worker.py
paper_engine/pdf/backends/: __init__.py  base.py  docling.py  grobid.py  legacy.py  llamaparse.py  mineru.py  pymupdf4llm.py
paper_engine/retrieval/: __init__.py  embedding_jobs.py  embedding_worker.py  embeddings.py  hybrid.py  lexical.py  service.py  vector_index.py
paper_engine/sidecar/: __init__.py  api.py  worker.py
paper_engine/spaces/: __init__.py  service.py
paper_engine/storage/: __init__.py  database.py  migrations.py
paper_engine/storage/repositories/: cards.py  papers.py  settings.py  spaces.py
scripts/: build_sidecars.py  debug_analysis.py  download_embedding_model.py  ensure_docling_models.py  ensure_pdf_advanced.py  eval_analysis_pipeline.py  eval_pdf_pipeline.py  run_tauri.mjs
scripts/ralph/: prd.json  progress.txt  ralph.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
static/: index.html
tasks/: prd-local-paper-knowledge-engine.md
tests/: conftest.py  frontend_analysis_queue.test.mjs  frontend_background_analysis.test.mjs  frontend_layout_controls.test.mjs  frontend_select_component.test.mjs  frontend_workspace_feedback.test.mjs  test_agent.py  test_agent_config_pdf_parser.py  test_agent_executor.py  test_analysis_jobs.py  test_analysis_models.py  test_analysis_persistence.py  test_analysis_pipeline_cards.py  test_analysis_pipeline_dedup.py  test_analysis_pipeline_metadata.py  test_analysis_pipeline_selection.py  test_analysis_prompts.py  test_analysis_verifier.py  test_api_parse_worker_startup.py  test_api_sidecar.py  test_backend_architecture.py  test_backend_package_structure.py  test_build_sidecars.py  test_card_extractor.py  test_card_extractor_domain_neutral.py  test_config.py  test_db.py  test_db_migrations.py  test_download_embedding_model.py  test_embedding_jobs.py  test_embedding_worker.py  test_embeddings.py  test_embeddings_parse_integration.py  test_ensure_docling_models.py  test_ensure_pdf_advanced.py  test_hybrid_search.py  test_installation_defaults.py  test_llm_client.py  test_main.py  test_mcp.py  (+31 more)
tests/eval/: test_ai_analysis_quality.py  test_pdf_parse_quality.py
tests/fixtures/: pdf_factory.py
