[project]
name = "paper-knowledge-engine"
version = "0.1.0"
description = "A local-first paper knowledge engine organized by research idea spaces"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
paper-engine-api = "api_sidecar:main"
paper-engine-mcp = "mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8",
    "pyinstaller>=6.0",
]

[tool.setuptools]
py-modules = [
    "agent_executor",
    "api_sidecar",
    "card_extractor",
    "config",
    "db",
    "llm_client",
    "main",
    "mcp_server",
    "parser",
    "pdf_models",
    "routes_agent",
    "routes_cards",
    "routes_papers",
    "routes_search",
    "routes_spaces",
    "search",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pymupdf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["parser", "tests.test_parser", "tests.test_search", "tests.test_mcp", "tests.test_routes_cards"]
disable_error_code = ["no-untyped-call", "no-any-return"]
