[project]
name = "paper-knowledge-engine"
version = "0.1.0"
description = "A local-first paper knowledge engine organized by research idea spaces"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24.0",
    "pymupdf4llm>=0.0.20",
    "pydantic>=2,<3",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
paper-engine-api = "paper_engine.sidecar.api:main"
paper-engine-mcp = "paper_engine.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8",
    "pyinstaller>=6.0",
]
pdf-advanced = ["docling>=2.0.0"]
embeddings = ["sentence-transformers>=2.7.0"]

[tool.setuptools.packages.find]
include = ["paper_engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "performance: performance budget tests that may skip in constrained CI",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = "^tests/"

[[tool.mypy.overrides]]
module = "pymupdf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paper_engine.pdf.profile"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "paper_engine.pdf.compat"
disable_error_code = ["no-untyped-call", "no-any-return"]
